--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -26,7 +26,7 @@ body::before {
     right: 0;
     bottom: 0;
     z-index: -1;
-    filter: blur(4px);
+    filter: blur(8px);
     /* Adjust blur intensity as needed */
     opacity: 1;
     /* Adjust opacity to balance blur effect and image visibility */
@@ -88,4 +88,16 @@ body::before {
 .nav-links li a:hover {
     color: #ccac00;
     /* Golden hover color */
+}
+
+.event-ticketing {
+    font-size: 20px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-weight: bold;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    width: 600px;
+    margin-left: 350px;
+    margin-top: 100px;
+    color: rgb(255, 255, 255);
 }
