--- a/src/components/RegisterForm.css
+++ b/src/components/RegisterForm.css
@@ -1,26 +1,20 @@
-/* RegisterForm.css */
-
 body {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    /* Ensure full viewport height */
     margin: 0;
     background-color: #9c9b9b;
-    /* Optional: Background color for the entire page */
 }
 
 .RegisterForm {
     max-width: 300px;
-    /* Reduced max-width for a smaller form */
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
     background-color: #bdbdbd;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
     text-align: center;
-    /* Centering text and elements */
 }
 
 .RegisterForm h2 {
@@ -28,7 +22,6 @@ body {
     color: #333333;
     font-size: 1.3rem;
     width: 200px;
-    /* Adjusted font size for heading */
 }
 
 .RegisterForm form {
@@ -49,11 +42,10 @@ body {
 .RegisterForm input[type="password"] {
     width: 100%;
     padding: 10px;
-    margin-bottom: 12px;
+    margin-bottom: 1px;
     border: 1px solid #dddddd;
     border-radius: 5px;
     font-size: 14px;
-    /* Adjusted font size for inputs */
 }
 
 .RegisterForm button {
@@ -62,15 +54,26 @@ body {
     border: none;
     border-radius: 5px;
     background-color: #007bff;
-    /* Blue background color */
     color: #ffffff;
     font-size: 14px;
-    /* Adjusted font size for button */
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
 
 .RegisterForm button:hover {
     background-color: #0056b3;
-    /* Darker blue on hover */
+}
+
+.Login label,
+.RegisterForm label {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.Login input[type="password"]+span,
+.RegisterForm input[type="password"]+span {
+    position: absolute;
+    right: 6px;
+    cursor: pointer;
 }
