--- a/src/components/Bookmark.css
+++ b/src/components/Bookmark.css
@@ -1,74 +1,77 @@
-.bookmarked-events-container {
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
     padding: 20px;
-    max-width: 1200px;
-    margin: 0 auto;
 }
 
-.bookmarked-events-title {
-    font-size: 2em;
+h2 {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.create-event-bookmark {
     margin-bottom: 20px;
-    text-align: center;
-    color: #333;
-    font-family: 'Montserrat', sans-serif;
 }
 
-.events-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 20px;
-}
-
-.event-card {
-    background-color: #ffffff;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 15px;
-    transition: transform 0.2s, box-shadow 0.2s;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    height: 420px;
-}
-
-.event-card:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-.event-photo {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
+.create-event-bookmark h3 {
     margin-bottom: 10px;
-    object-fit: cover;
-    max-height: 100px;
 }
 
-.event-title {
-    font-size: 1.2em;
-    margin-bottom: 8px;
-    color: #333;
-    font-family: 'Montserrat', sans-serif;
+.create-event-bookmark .row {
+    align-items: center;
 }
 
-.event-description {
-    font-size: 0.9em;
-    margin-bottom: 8px;
-    color: #555;
-    font-family: 'Open Sans', sans-serif;
+.create-event-bookmark .col input {
+    width: 100%;
+    padding: 8px;
+    border-radius: 15px;
+    text-align: center;
 }
 
-.event-price {
-    font-size: 1em;
-    color: #777;
-    font-family: 'Open Sans', sans-serif;
-    margin-bottom: 5px;
+.create-event-bookmark .col-auto button {
+    margin-left: 10px;
 }
 
-.event-date {
-    font-size: 0.9em;
-    color: #999;
-    font-family: 'Open Sans', sans-serif;
+.event-bookmark-card {
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin-bottom: 15px;
+}
+
+.event-bookmark-card h5 {
+    margin-top: 0;
+}
+
+.event-bookmark-card .btn {
+    margin-top: 10px;
+}
+
+.event-bookmark-card .mt-3 {
+    margin-top: 15px;
+}
+
+.event-bookmark-card .mt-3 h5 {
+    margin-bottom: 10px;
+}
+
+.event-bookmark-card .row {
+    align-items: center;
+}
+
+.event-bookmark-card .col input {
+    width: 100%;
+    padding: 8px;
+    border-radius: 15px;
+    text-align: center;
+}
+
+.event-bookmark-card .col-auto button {
+    margin-left: 10px;
 }
